Infra/demo-app-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo
  labels:
    app: demo-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: IMAGE_URL_WITH_TAG
        readinessProbe:
          httpGet:
             path: /
             port: 8080
          initialDelaySeconds: 30
          periodSeconds: 45
        livenessProbe:
          httpGet:
             path: /
             port: 8080
          initialDelaySeconds: 60
          periodSeconds: 60
        resources:
          requests:
            cpu: 50m
            memory: "100Mi"
          limits:
            cpu: 3000m
            memory: "3Gi"
        ports:
        - containerPort: 8080
          protocol: TCP
      imagePullSecrets:
      - name: my-secret-docker-pass

---

apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: demo
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: demo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app-service
            port:
              number: 8080
